# study-review-graph

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements.txt
.agents/skills/review-material-generator/: SKILL.md
.agents/skills/review-material-generator/assets/: output-templates.md
.agents/skills/review-material-skill/: README.md
.agents/skills/review-material-skill/references/: design-notes.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: architecture.md  release_notes_v0.1.1.md  roadmap.md  state_schema.md
examples/input/: physics_intro.md
examples/output/: README.md
src/study_review_graph/: __init__.py  __main__.py  cli.py  compat.py  graph.py  ingestion.py  markdown_math.py  model_client.py  retrieval.py  state.py
src/study_review_graph/agents/: __init__.py  session.py
src/study_review_graph/exporters/: markdown.py
src/study_review_graph/nodes/: answer_check.py  content_map.py  examples.py  export.py  practice_set.py  quality_review.py  review_notes.py
src/study_review_graph/subgraphs/: __init__.py  formula_subgraph.py  solution_subgraph.py
tests/: conftest.py  test_agent_session.py  test_answer_check.py  test_cli.py  test_content_map.py  test_examples.py  test_formula_subgraph.py  test_graph.py  test_model_client.py  test_pipeline.py  test_practice_set.py  test_retrieval.py  test_review_notes.py  test_solution_subgraph.py  test_state.py
